Fix: only one HiddenMenu is now visible at a time

--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -2066,7 +2066,8 @@ button {
   -ms-user-select: none;
 }
 
-img.no-select {
+img.no-select,
+.p-events-none {
   pointer-events: none;
 }
 
